SSC-885 fix spacing under banner hero on every viewport

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-area-property-display.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-area-property-display.less
@@ -1,3 +1,6 @@
+.destination .o-area-property-display {
+    padding-top: 0;
+}
 .o-area-property-display {
     padding-top: 31px;
 
