--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-search-hero.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-search-hero.less
@@ -1,6 +1,4 @@
 .c-hero-banner__search {
-    margin: 0 auto;
-
     .c-hero-banner__image {
         height: 450px;
 
